<resources>
    <string name="app_name">Movies</string>
    <string name="video_poster">Video\'s poster</string>
    <string name="video_backdrop">video\'s backdrop</string>
    <string name="popularity_percentage">Popularity: %s </string>
    <string name="overview">Overview</string>
    <string name="released">Released</string>
    <string name="original_title">Original Title</string>
    <string name="original_language">Original Language</string>
    <string name="popularity">Popularity</string>
    <string name="revenue">Revenue</string>
    <string name="clip_thumbnail">Clip thumbnail</string>
    <string name="author_avatar">Author\'s avatar</string>
    <string name="genres">Genres</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="app_logo">App logo</string>
    <string name="saved">Saved</string>
    <string name="button_retry">Retry</string>
    <string name="something_went_wrong">Something went wrong, Please try again</string>
    <string name="movie_poster">Movie poster</string>
    <string name="broken_image">Broken image</string>
    <string name="movie_backdrop">Movie backdrop</string>
    <string name="clip_image">Clip image</string>
    <string name="reviewer_photo">Reviewer photo</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorites">Favourites</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv_shows">Popular TV Shows</string>

    <string-array name="tabs_home_titles">
        <item>MOVIES</item>
        <item>TV SHOWS</item>
        <item>FAVORITES</item>
    </string-array>

    <string-array name="tabs_details_titles">
        <item>INFO</item>
        <item>CLIPS</item>
        <item>REVIEWS</item>
    </string-array>
</resources>