<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.movies.domain.entities.Movie" />

        <import type="android.view.View" />

        <variable
            name="infoViewModel"
            type="com.example.movies.presentation.details.children.info.InfoViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_700"
            android:padding="@dimen/spacing_normal"
            tools:context=".ui.home.movies.MoviesFragment">

            <TextView
                android:id="@+id/text_view_overview"
                style="@style/Size14LightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{infoViewModel.info.overview}"
                tools:text="@string/overview" />

            <TextView
                android:id="@+id/text_view_genres_title"
                style="@style/BoldSize16VeryDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_overview"
                android:text="@string/genres" />

            <TextView
                android:id="@+id/text_view_genres"
                style="@style/Size14LightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_overview"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_toEndOf="@id/text_view_genres_title"
                android:text="@{infoViewModel.info.genres}"
                tools:text="@string/genres" />

            <TextView
                android:id="@+id/text_view_released_title"
                style="@style/BoldSize16VeryDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_genres_title"
                android:text="@string/released" />

            <TextView
                android:id="@+id/text_view_released"
                style="@style/Size14LightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_genres_title"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_toEndOf="@id/text_view_released_title"
                android:text="@{infoViewModel.info.releaseDate}"
                tools:text="@string/released" />

            <TextView
                android:id="@+id/text_view_original_title_title"
                style="@style/BoldSize16VeryDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_released_title"
                android:text="@string/original" />

            <TextView
                android:id="@+id/text_view_original_title"
                style="@style/Size14LightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_released_title"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_toEndOf="@id/text_view_original_title_title"
                android:text="@{infoViewModel.info.originalTitle}"
                tools:text="@string/original" />

            <TextView
                android:id="@+id/text_view_original_language_title"
                style="@style/BoldSize16VeryDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_original_title_title"
                android:text="@string/original_language" />

            <TextView
                android:id="@+id/text_view_original_language"
                style="@style/Size14LightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_original_title_title"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_toEndOf="@id/text_view_original_language_title"
                android:text="@{infoViewModel.info.originalLanguage}"
                tools:text="@string/original_language" />

            <TextView
                android:id="@+id/text_view_popularity_title"
                style="@style/BoldSize16VeryDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_original_language_title"
                android:text="@string/popularity" />

            <TextView
                android:id="@+id/text_view_popularity"
                style="@style/Size14LightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_original_language_title"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_toEndOf="@id/text_view_popularity_title"
                android:text="@{String.valueOf(infoViewModel.info.popularity)}"
                tools:text="@string/popularity" />

            <TextView
                android:id="@+id/text_view_revenue_title"
                style="@style/BoldSize16VeryDarkGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_popularity_title"
                android:text="@string/revenue"
                android:visibility="@{(infoViewModel.info instanceof Movie)? View.VISIBLE : View.GONE}" />

            <TextView
                android:id="@+id/text_view_revenue"
                style="@style/Size14LightGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_popularity_title"
                android:layout_marginStart="@dimen/spacing_small"
                android:layout_toEndOf="@id/text_view_revenue_title"
                android:text="@{(infoViewModel.info instanceof Movie)? String.valueOf(((Movie)infoViewModel.info).revenue) : ``}"
                android:visibility="@{(infoViewModel.info instanceof Movie)? View.VISIBLE : View.GONE}"
                tools:text="@string/revenue" />

        </RelativeLayout>
    </ScrollView>
</layout>