<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movie"
            type="com.example.movies.domain.entities.Movie" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_700"
        tools:context=".ui.details.DetailsFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_horizontal_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_horizontal_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line_horizontal_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/image_view_movie_backdrop"
            imageURL="@{movie.backdropUri}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_backdrop"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/guide_line_horizontal_40"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/image_view_movie_poster"
            imageURL="@{movie.posterUri}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_large"
            android:adjustViewBounds="false"
            android:contentDescription="@string/movie_poster"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/guide_line_horizontal_50"
            app:layout_constraintDimensionRatio="w,1:2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_line_horizontal_20"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/text_view_title"
            style="@style/RegularSize18White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@{movie.title}"
            app:layout_constraintBottom_toTopOf="@id/guide_line_horizontal_50"
            app:layout_constraintStart_toEndOf="@id/image_view_movie_poster"
            app:layout_constraintTop_toTopOf="@id/guide_line_horizontal_40"
            tools:text="movie_name" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_details"
            style="@style/MainTabLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/guide_line_horizontal_50" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@id/button_add_to_favorites"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_details" />

        <Button
            android:id="@+id/button_add_to_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:layout_marginBottom="@dimen/spacing_small"
            android:backgroundTint="@color/strong_pink"
            android:text="@string/add_to_favorites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>